@@ -136,6 +136,9 @@
 	</ol>
 
 
+	<p>Note:  When using a Windows <span class="caps">FTP</span> server, you must configure the <span class="caps">FTP</span> server to provide a <span class="caps">UNIX</span> directory listing format</p>
+
+
 	<h2>Usage</h2>
 
 
